# Sencity-twizy

./: .gitmodules  Data.md  Hardware.md  README.md  launch.sh  setup.sh
3D/: IMU.scad  IMU_couvercle.scad  README.md
Arduino/: README.md
Arduino/imu/: README.md  imu.ino
ROS/: README.md
ROS/gps/: README.md
ROS/gps/gps/: CMakeLists.txt  package.xml
ROS/gps/gps_driver/: CMakeLists.txt  nodelet_gps.xml  package.xml
ROS/gps/gps_driver/launch/: nodelet_manager.launch
ROS/gps/gps_driver/src/: CMakeLists.txt  driver.cc  driver.h  gps_node.cc  nodelet.cc
ROS/gps/gps_fix/: CMakeLists.txt  nodelets.xml  package.xml
ROS/gps/gps_fix/launch/: fix.launch
ROS/gps/gps_fix/src/: CMakeLists.txt  fix.cc  fix.h  fix_node.cc  fix_nodelet.cc
ROS/gps/gps_msgs/: CMakeLists.txt  package.xml
ROS/gps/gps_msgs/msg/: GpsData.msg  GpsSentences.msg
ROS/gps/gps_parser/: CMakeLists.txt  nodelet.xml  package.xml
ROS/gps/gps_parser/launch/: gps_parser.launch
ROS/gps/gps_parser/src/: CMakeLists.txt  gps_node.cc  nodelet.cc  parser.cc  parser.h
ROS/gps/gps_save/: CMakeLists.txt  nodelets.xml  package.xml
ROS/gps/gps_save/launch/: save.launch
ROS/gps/gps_save/src/: CMakeLists.txt  save.cc  save.h  save_node.cc  save_nodelet.cc
ROS/imu/: README.md
ROS/imu/imu/: CMakeLists.txt  package.xml
ROS/imu/imu_driver/: CMakeLists.txt  nodelet_imu.xml  package.xml
ROS/imu/imu_driver/launch/: nodelet_manager.launch
ROS/imu/imu_driver/src/: CMakeLists.txt  driver.cc  driver.h  imu_node.cc  nodelet.cc
ROS/imu/imu_save/: CMakeLists.txt  nodelets.xml  package.xml
ROS/imu/imu_save/launch/: save.launch
ROS/imu/imu_save/src/: CMakeLists.txt  save.cc  save.h  save_node.cc  save_nodelet.cc
ROS/twizy/: CMakeLists.txt  package.xml
ROS/twizy/config/: gps.rviz  imu.rviz  velodyne.rviz
ROS/twizy/launch/: save.launch  saveAndView.launch  saveWifi.launch  streamView.launch  view.launch  viewBag.launch
ROS/velodyne_savedata/: CMakeLists.txt  README.md  nodelets.xml  package.xml
ROS/velodyne_savedata/launch/: save.launch
ROS/velodyne_savedata/src/: CMakeLists.txt  savedata.cc  savedata.h  savedata_node.cc  savedata_nodelet.cc
ROS/wifi/: README.md
ROS/wifi/wifi/: CMakeLists.txt  package.xml
ROS/wifi/wifi_driver/: CMakeLists.txt  nodelet_wifi.xml  package.xml
ROS/wifi/wifi_driver/launch/: nodelet_manager.launch
ROS/wifi/wifi_driver/src/: CMakeLists.txt  driver.cc  driver.h  nodelet.cc  wifi_node.cc
ROS/wifi/wifi_msgs/: CMakeLists.txt  package.xml
ROS/wifi/wifi_msgs/msg/: WifiData.msg  WifiScan.msg
ROS/wifi/wifi_save/: CMakeLists.txt  nodelets.xml  package.xml
ROS/wifi/wifi_save/launch/: save.launch
ROS/wifi/wifi_save/src/: CMakeLists.txt  save.cc  save.h  save_node.cc  save_nodelet.cc
Tools/: README.md
Tools/Converter/GPS/BinaryToCsv/: Makefile  README.md
Tools/Converter/GPS/BinaryToCsv/src/: binToCsv.c
Tools/Converter/IMU/BinaryToCsv/: Makefile  README.md
Tools/Converter/IMU/BinaryToCsv/src/: binToCsv.c
Tools/Converter/LIDAR/BinaryToCsv/: Makefile  README.md
Tools/Converter/LIDAR/BinaryToCsv/src/: binToCsv.c
Tools/Converter/WiFi/BinaryToCsv/: Makefile  README.md
Tools/Converter/WiFi/BinaryToCsv/src/: binToCsv.c
