<package>

  <name>velodyne_savedata</name>
  <version>1.0.0</version>
  <description>
    Velodyne 3D LIDAR VLP16 data save.
  </description>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>

  <!-- these build dependencies are only needed for unit testing -->
  <build_depend>roslaunch</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
