<?xml version="1.0"?>
<package>
  <name>gps_driver</name>
  <version>1.0.0</version>
  <description>The gps_driver package</description>
  <maintainer email="anon@an.on">Anon</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gps_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>serial</build_depend>
  
  <run_depend>gps_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_gps.xml"/>
  </export>
</package>
