<package>

  <name>imu_save</name>
  <version>1.0.0</version>
  <description>
    IMU save data.
  </description>
  <license>GPLv3</license>
  <maintainer email="anon@an.on">Anon</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- these build dependencies are only needed for unit testing -->
  <build_depend>roslaunch</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
