<?xml version="1.0"?>
<package>
  <name>wifi</name>
  <version>1.0.0</version>
  <description>The wifi package</description>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>wifi_msg</run_depend>
  <run_depend>wifi_driver</run_depend>
  <run_depend>wifi_save</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
